# game-shell

./: CLAUDE.md  shell.qml
.github/workflows/: rust.yml
components/: AVControlSettings.qml  BluetoothSettings.qml  HomeScreen.qml  KeyBindingsSettings.qml  StreamManager.qml
config/: hyprland.conf
dev/: Dockerfile  entrypoint.sh  hyprland-dev.conf
docs/: IPC_PROTOCOL.md
input/: gamepad-input.py
rust/: Cargo.toml  README.md
rust/src/: config.rs  device.rs  input.rs  ipc.rs  main.rs  protocol.rs
scripts/: game-shell-session.sh
